--- a/features/name_input/pubspec.yaml
+++ b/features/name_input/pubspec.yaml
@@ -1,6 +1,7 @@
 name: name_input
 description: A new Flutter package project.
 version: 0.0.1
+publish_to: none
 homepage:
 
 environment:
@@ -10,6 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: 2.0.3
+  flutter_bloc: 8.0.1
+  core:
+    path: ../../core
 
 dev_dependencies:
   flutter_test:
