--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   google_fonts: ^2.2.0
+  cool_alert: ^1.1.0
   core:
     path: ./core
+  name_input:
+    path: ./features/name_input
 
 dev_dependencies:
   flutter_test:
